--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="background">
       <div class="heading">
         <div class="br-heading">
-          <h1>BR</h1>
+          <h1>Saad</h1>
         </div>
         <div class="arch-heading">
           <h1>Architecture</h1>
